# duneanasel

./: CMakeLists.txt  README.md
duneanasel/common/: type_traits.h
duneanasel/fd/atmospheric/: Selections.h
duneanasel/fd/beam/: Projections.h  Selections.h
examples/cuts_with_summary_file/: README.md  cuts_with_summary.py
examples/ndlarplot/: CMakeLists.txt  NDLAr_NumuCCContained_LongestTrack.cxx
examples/user_project/: CMakeLists.txt  myana.cxx
